objects/ALTF__Account_Plan_Solution__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Plan__c</fullName>
        <label>Account Manager Plan</label>
        <referenceTo>ALTF__Account_Plan__c</referenceTo>
        <relationshipName>Account_Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Solution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AM_Solution</label>
        <referenceTo>ALTF__Solution__c</referenceTo>
        <relationshipLabel>Altify Account Manager Plan Solutions</relationshipLabel>
        <relationshipName>Plan_Solutions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Targeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted</label>
        <type>Checkbox</type>
    </fields>
    <label>Altify Account Manager Plan Solution</label>
    <nameField>
        <label>Altify Account Manager Plan Solution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Manager Plan Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>